--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </p>
       <p>
         This website is hosted on GitHub Pages!
-        <a href="https://USERNAME.github.io/REPO-NAME"
-          >https://USERNAME.github.io/REPO-NAME</a
+        <a href="https://dylaneelyse.github.io/WD1-Lab-6/"
+          >https://dylaneelyse.github.io/WD1-Lab-6/</a
         >
       </p>
     </footer>
